export const snapshot = {};

snapshot[`getPhoto() 1`] = `
{
  camera: "Apple iPhone 13 mini",
  city: "San Francisco",
  country: "United States",
  date: "2023-12-10T14:28:09-08:00",
  description: "Four jellyfish with translucent bodies and long tentacles float gracefully against a vivid background in an aquarium setting.",
  height: 180,
  id: "floating-around",
  keywords: [
    "California Academy Of Sciences",
    "Translucent Bodies",
    "Long Tentacles",
    "Float Gracefully",
    "Vivid Background",
    "Aquarium Setting",
    "Marine Life",
    "Underwater World",
    "Ocean Creatures",
    "Exotic Jellyfish",
    "Aquatic Environment",
    "Sea Life",
    "Ethereal Beauty",
    "Marine Biology",
    "Underwater Exploration",
    "Aquatic Creatures",
    "Jellyfish Swimming",
    "Oceanic Wildlife",
    "Marine Exhibit",
    "Horizontal",
    "No People",
    "Photography",
    "Jellyfish",
    "Underwater",
    "Water",
    "Blue",
    "Undersea",
    "Sea",
    "Nature",
    "Animal Themes",
    "Animal Wildlife",
    "Swimming",
    "Tentacle",
  ],
  lens: "iPhone 13 mini back dual wide camera 5.1mm f/1.6",
  license: "https://creativecommons.org/licenses/by/4.0/",
  location: "California Academy of Sciences",
  software: "Affinity Photo 2 2.5.7",
  src: "source.jpg",
  state: "California",
  title: "Floating Around",
  variants: [
    {
      description: "Four jellyfish with translucent bodies and long tentacles float gracefully against a vivid background in an aquarium setting (image 1).",
      height: 135,
      src: "post-1.jpg",
      width: 108,
    },
    {
      description: "Four jellyfish with translucent bodies and long tentacles float gracefully against a vivid background in an aquarium setting (image 2).",
      height: 135,
      src: "post-2.jpg",
      width: 108,
    },
    {
      height: 180,
      src: "square.jpg",
      width: 180,
    },
    {
      height: 192,
      src: "story.jpg",
      width: 108,
    },
    {
      height: 180,
      src: "wide.jpg",
      width: 320,
    },
  ],
  width: 240,
}
`;

snapshot[`copyExifToVariants() 1`] = `
{
  camera: "Apple iPhone 13 mini",
  city: "Ankara",
  country: "Turkey",
  date: "2023-02-03T10:27:26",
  description: "A dark-furred cat silhouetted against a window overlooking a snowy landscape.",
  height: 180,
  id: "winter-pause",
  keywords: [
    "Ankara",
    "Turkey",
    "Cat",
    "Window",
    "Silhouette",
    "Dark Fur",
    "Snow",
    "Landscape",
    "Animal",
    "Pet",
    "Domesticated",
    "Feline",
    "House Cat",
    "Winter",
    "Weather",
    "Scenery",
    "View",
    "Outdoor",
    "Nature",
    "Cold",
  ],
  lens: "iPhone 13 mini back dual wide camera 5.1mm f/1.6",
  license: "https://creativecommons.org/licenses/by/4.0/",
  location: "Ankara, Turkey",
  software: "Affinity Photo 2 2.5.7",
  src: "source.jpg",
  state: "Ankara",
  title: "Winter Pause",
  variants: [
    {
      camera: undefined,
      city: undefined,
      country: undefined,
      date: undefined,
      description: undefined,
      height: 144,
      keywords: [],
      lens: undefined,
      license: undefined,
      location: undefined,
      software: undefined,
      src: "post-1.jpg",
      state: undefined,
      title: undefined,
      width: 108,
    },
    {
      camera: undefined,
      city: undefined,
      country: undefined,
      date: undefined,
      description: undefined,
      height: 144,
      keywords: [],
      lens: undefined,
      license: undefined,
      location: undefined,
      software: undefined,
      src: "post-2.jpg",
      state: undefined,
      title: undefined,
      width: 108,
    },
    {
      camera: undefined,
      city: undefined,
      country: undefined,
      date: undefined,
      description: undefined,
      height: 180,
      keywords: [],
      lens: undefined,
      license: undefined,
      location: undefined,
      software: undefined,
      src: "square.jpg",
      state: undefined,
      title: undefined,
      width: 180,
    },
    {
      camera: undefined,
      city: undefined,
      country: undefined,
      date: undefined,
      description: undefined,
      height: 180,
      keywords: [],
      lens: undefined,
      license: undefined,
      location: undefined,
      software: undefined,
      src: "wide.jpg",
      state: undefined,
      title: undefined,
      width: 320,
    },
  ],
  width: 320,
}
`;

snapshot[`copyExifToVariants() 2`] = `
{
  camera: "Apple iPhone 13 mini",
  city: "Ankara",
  country: "Turkey",
  date: "2023-02-03T10:27:26",
  description: "A dark-furred cat silhouetted against a window overlooking a snowy landscape.",
  height: 180,
  id: "winter-pause",
  keywords: [
    "Ankara",
    "Turkey",
    "Cat",
    "Window",
    "Silhouette",
    "Dark Fur",
    "Snow",
    "Landscape",
    "Animal",
    "Pet",
    "Domesticated",
    "Feline",
    "House Cat",
    "Winter",
    "Weather",
    "Scenery",
    "View",
    "Outdoor",
    "Nature",
    "Cold",
  ],
  lens: "iPhone 13 mini back dual wide camera 5.1mm f/1.6",
  license: "https://creativecommons.org/licenses/by/4.0/",
  location: "Ankara, Turkey",
  software: "Affinity Photo 2 2.5.7",
  src: "source.jpg",
  state: "Ankara",
  title: "Winter Pause",
  variants: [
    {
      description: "A dark-furred cat silhouetted against a window overlooking a snowy landscape (image 1).",
      height: 144,
      src: "post-1.jpg",
      width: 108,
    },
    {
      description: "A dark-furred cat silhouetted against a window overlooking a snowy landscape (image 2).",
      height: 144,
      src: "post-2.jpg",
      width: 108,
    },
    {
      height: 180,
      src: "square.jpg",
      width: 180,
    },
    {
      height: 180,
      src: "wide.jpg",
      width: 320,
    },
  ],
  width: 320,
}
`;
